# pandabot-core

./: AGENTS.md  CHANNELS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
pandabot_core/: __init__.py  channels.py  config.py  discord_comms.py  goals.py  identity.py  mcp_server.py  scheduler.py  scheduler_runtime.py  telemetry.py  testing.py  tool_registry.py
pandabot_core/llm/: __init__.py  loop.py  provider.py  usage.py
pandabot_core/pm/: __init__.py  github.py  openproject.py
tests/: conftest.py  test_channels.py  test_config.py  test_discord_comms.py  test_goals.py  test_identity.py  test_pm_github.py  test_scheduler.py  test_scheduler_runtime.py  test_testing.py  test_tool_registry.py
